{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 16,
  "lineage": "99cd5f05-ab5e-b7f2-3d27-6ddac38f1a41",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02bcf4285d4895d33",
            "arn": "arn:aws:ec2:us-west-2:557623108041:instance/i-0cfbb0af6b793fc0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfbb0af6b793fc0c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-assoc-us-west-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fbba3fd00e9d6fc9",
            "private_dns": "ip-10-0-1-173.us-west-2.compute.internal",
            "private_ip": "10.0.1.173",
            "public_dns": "ec2-35-86-136-21.us-west-2.compute.amazonaws.com",
            "public_ip": "35.86.136.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-088c424a55ab33321",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0996b3667e1c7c62d",
            "tags": {
              "Name": "Scrumptious Jenkins"
            },
            "tags_all": {
              "Name": "Scrumptious Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-082249fc3c7d29aa9"
            ]
          },
          "dependencies": [
            "data.aws_ami.amz_linux_2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_security_group.jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557623108041:security-group/sg-082249fc3c7d29aa9",
            "description": "Jenkins security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082249fc3c7d29aa9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "scrumptious_jenkins_sg",
            "name_prefix": "",
            "owner_id": "557623108041",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b4f96667e77849fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557623108041:internet-gateway/igw-0b84490884d3e08ee",
            "id": "igw-0b84490884d3e08ee",
            "owner_id": "557623108041",
            "tags": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "tags_all": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "vpc_id": "vpc-0b4f96667e77849fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b84490884d3e08ee",
            "id": "r-rtb-0719e179a85cc56f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0719e179a85cc56f1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557623108041:route-table/rtb-0dbfde3fc83e2910e",
            "id": "rtb-0dbfde3fc83e2910e",
            "owner_id": "557623108041",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc-private-us-west-2a",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "tags_all": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc-private-us-west-2a",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "vpc_id": "vpc-0b4f96667e77849fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557623108041:route-table/rtb-0719e179a85cc56f1",
            "id": "rtb-0719e179a85cc56f1",
            "owner_id": "557623108041",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b84490884d3e08ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc-public",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "tags_all": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc-public",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "vpc_id": "vpc-0b4f96667e77849fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0373b81612662f76e",
            "route_table_id": "rtb-0dbfde3fc83e2910e",
            "subnet_id": "subnet-08dfc61a0edd4f2f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c5e0dcb72e7ac15",
            "route_table_id": "rtb-0719e179a85cc56f1",
            "subnet_id": "subnet-0996b3667e1c7c62d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557623108041:subnet/subnet-08dfc61a0edd4f2f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08dfc61a0edd4f2f7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "557623108041",
            "tags": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc-private-us-west-2a",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "tags_all": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc-private-us-west-2a",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "vpc_id": "vpc-0b4f96667e77849fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557623108041:subnet/subnet-0996b3667e1c7c62d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0996b3667e1c7c62d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "557623108041",
            "tags": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc-public-us-west-2a",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "tags_all": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc-public-us-west-2a",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "vpc_id": "vpc-0b4f96667e77849fc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:557623108041:vpc/vpc-0b4f96667e77849fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fd9a562f308be50b",
            "default_route_table_id": "rtb-0a2c8898c90d2a2b0",
            "default_security_group_id": "sg-0a7189ece80c1b3b5",
            "dhcp_options_id": "dopt-08dcfa70",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b4f96667e77849fc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a2c8898c90d2a2b0",
            "owner_id": "557623108041",
            "tags": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            },
            "tags_all": {
              "Env": "CI/CD",
              "Name": "jenkins-vpc",
              "Project": "ss-driver-location-streaming",
              "Team": "Data-Engineers"
            }
          }
        }
      ]
    }
  ]
}